tests/rosetta/out/Java/animate-a-pendulum.error
parse: error[P052]: /workspace/mochi/tests/rosetta/x/Mochi/animate-a-pendulum.mochi:24:22: unexpected token "-1" (expected "(" (Expr ("," Expr)*)? ")")
  --> /workspace/mochi/tests/rosetta/x/Mochi/animate-a-pendulum.mochi:24:22

 24 |     let denom = ((2*n-1)*(2*n)) as float
    |                      ^

help:
  Unbalanced parentheses. Check for missing `(` or `)`.